--- a/website/javascript  /variable.html
+++ b/website/javascript  /variable.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Variables</title>
 </head>
 <body>
-    <h1 id="hh"></h1>
-    <p id="p"></p>
-
-
-    <script src="index.js"></script>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p>
+    <script src="var.js"></script>
 </body>
 </html>
