--- a/website/javascript  /variable.html
+++ b/website/javascript  /variable.html
@@ -6,9 +6,9 @@
     <title>Variables</title>
 </head>
 <body>
-    <p id="p1"></p>
-    <p id="p2"></p>
-    <p id="p3"></p>
-    <script src="var.js"></script>
+    <p id="para1"></p>
+    <p id="para2"></p>
+    <p id="para3"></p>
+    <script src="index.js"></script>
 </body>
 </html>
